# brite_assignment

./: .gitignore  Makefile  README.md  docker-compose.yaml  task.md  test.compose.yaml
.github/workflows/: build-and-push.yml  e2e-test.yml  unit-test.yml
mock-omdb/: Dockerfile  README.md  pyproject.toml
mock-omdb/mock_omdb/: app.py  movies_by_imdbID.json  movies_by_title.json
movies-api/: .coverage  .dockerignore  Dockerfile  README.md  pyproject.toml
movies-api/movies_api/: app.py  config.py  wsgi.py
movies-api/movies_api/movies/: models.py  routes.py
movies-api/movies_api/services/: omdb.py
movies-api/movies_api/users/: models.py  routes.py
movies-api/tests/movies/: movies_models_test.py  movies_routes_test.py
movies-api/tests/services/: services_omdb_test.py
movies-api/tests/users/: users_models_test.py  users_routes_test.py
test-utils/db/: init.sql
test-utils/e2e/: e2e.hurl
