[tool.poetry]
name = "mock-omdb"
version = "0.1.0"
description = ""
authors = ["Bosco Vallejo-Nágera Esteban <juan.vallejonagera@newryglobal.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
