[tool.poetry]
name = "movies-api"
version = "0.1.0"
description = ""
authors = ["Bosco Vallejo-Nágera Esteban <bosco@vallejonagera.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-jwt-extended = "^4.6.0"
flask-caching = "^2.3.0"
aiohttp = "^3.10.8"
requests = "^2.32.3"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
asynctest = "^0.13.0"
python-dotenv = "^1.0.1"
debugpy = "^1.8.6"
psycopg2 = "^2.9.9"
redis = "^5.1.0"
bcrypt = "^4.2.0"
pytest-cov = "^5.0.0"
gunicorn = "^23.0.0"
uvicorn = "^0.31.0"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = ["--cov=movies_api", "--cov-report=term-missing"]

[tool.coverage.run]
omit = ["movies_api/wsgi.py", "movies_api/config.py"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
